<resources>
    <string name="app_name">SCAP - Apoderados</string>
    <string name="Saludo_inicial">¡Bienvenido apoderado!</string>
    <string name="Descripcion_inicial">Dentro de esta aplicacion puedes revisar las diferentes actividades que los profesores han diseñado para tus hijos.</string>
    <string name="Titulo_tareas">Tareas</string>
    <string name="Descripcion_tareas">Dentro de esta sección puedes ver las diferentes tareas que los profesores les han asignado a tus hijos como también sus fechas de entrega.</string>
    <string name="Titulo_SES">Estudio Semanal</string>
    <string name="Descripcion_SES">Dentro de esta sección puedes revisar las actividades que los profesores han diseñado especialmente para sus hijos, es muy importante realizar estas mismas, ya que ayuda mucho al profesor a mejorar su clase y por ende, la educación de sus hijos.</string>
    <string name="Titulo_materiales">Materiales</string>
    <string name="Descripcion_materiales">Dentro de esta sección puede ver que materiales les han sido solicitado por diferentes profesores y para cuando estos han sido pedidos.</string>
    <string name="Titulo_pruebas">Pruebas</string>
    <string name="Titulo_prueba">Prueba</string>
    <string name="Descripcion_pruebas">Dentro de esta sección puedes ver las pruebas a evaluar por los profesores, en conjunto con su temario y cuando estas serán evaluadas.</string>
    <string name="Titulo">Título:</string>
    <string name="Materia">Materia:</string>
    <string name="Fecha">Fecha:</string>
    <string name="Descripcion">Descripción:</string>
    <string name="Dos_puntos">:</string>
    <string name="Entendio">Responder actividad</string>
    <string name="No_entendio">No entendió</string>
    <string name="Profesor">Profesor:</string>
    <string name="Bienvenido">¡Bienvenido!</string>
    <string name="Descripcion_login">Porfavor introduzca su correo y contraseña para continuar.</string>
    <string name="Email_hint">ejemplo@dominio.cl</string>
    <string name="SignIn">Ingresar</string>
    <string name="Bien">¡Bien!</string>
    <string name="Done">Hecho</string>
    <string name="Descripcion_hijos_2">Ahora, porfavor proceda a escoger por cual estudiante debiese consultar la aplicación.</string>
    <string name="Descripcion_hijos_1">Primero, seleccione el colegio al cual sus hijos asisten.</string>
    <string name="Descripcion_Final_SES">Por último, evalúe la actividad, y si desea, puede añadir un comentario final sobre esta.</string>
    <string name="Hint_descripcion">Ingrese un comentario opcional aquí...</string>
    <string name="Enviar">Enviar</string>
    <string name="channel_name">default_channel</string>
    <string name="channel_description">test channel</string>
    <string name="first_question">¿Cual fue el grado de dificultad de la actividad?</string>
    <string name="second_question">¿Cuanto tiempo le tomó resolver la actividad?</string>
    <string name="third_question">¿Cuán interesado se mostró su pupilo con la actividad?</string>
    <string name="facil">Fácil</string>
    <string name="normal">Normal</string>
    <string name="dificil">Difícil</string>
    <string name="menos5">Menos de 5</string>
    <string name="entre5">Entre 5 y 10</string>
    <string name="mas10">Más de 10</string>
    <string name="entusiasmado">Entusiasmado</string>
    <string name="desinteresado">Desinteresado</string>
    <string name="aburrido">Aburrido</string>
    <string name="secondquestion">¿Cuánto tiempo le tomó realizar la actividad?</string>
    <string name="alert_finalSES">Porfavor, responda las tres preguntas de la actividad antes de continuar.</string>
    <string name="respuesta_facil">facil</string>
    <string name="respuesta_normal">normal</string>
    <string name="respuesta_dicil">dificil</string>
    <string name="respuesta_menos5">menos</string>
    <string name="respuesta_entre">entre</string>
    <string name="respuesta_mas">mas</string>
    <string name="respuesta_preg3_1">entusiasmado</string>
    <string name="respuesta_preg3_2">desinteresado</string>
    <string name="respuesta_preg3_3">aburrido</string>
    <string name="DBerror">Ha ocurrido un error inesperado, por favor intente más tarde.</string>
</resources>
