<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorFondo"
    tools:context=".Activities.FinalSESActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_marginTop="10dp"
                android:text="@string/Descripcion_Final_SES"
                android:gravity="center_horizontal"
                android:textColor="@color/blanco"
                android:textSize="18dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/first_question"
                    android:textSize="16dp"
                    android:gravity="center_horizontal"/>

                <RadioGroup
                    android:id="@+id/first_question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <RadioButton
                        android:id="@+id/facil"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/facil"
                        android:layout_weight="1"/>

                    <RadioButton
                        android:id="@+id/normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/normal"
                        android:layout_weight="1"/>

                    <RadioButton
                        android:id="@+id/dificil"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dificil"
                        android:layout_weight="1"/>
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/second_question"
                    android:textSize="16dp"
                    android:gravity="center_horizontal"/>

                <RadioGroup
                    android:id="@+id/second_question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <RadioButton
                        android:id="@+id/menos5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/menos5"
                        android:layout_weight="1"/>

                    <RadioButton
                        android:id="@+id/entre5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/entre5"
                        android:layout_weight="1"/>

                    <RadioButton
                        android:id="@+id/mas10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mas10"
                        android:layout_weight="1"/>
                </RadioGroup>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/third_question"
                    android:textSize="16dp"
                    android:gravity="center_horizontal"/>

                <RadioGroup
                    android:id="@+id/third_question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <RadioButton
                        android:id="@+id/q1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/entusiasmado"
                        android:layout_weight="1"/>

                    <RadioButton
                        android:id="@+id/q2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/desinteresado"
                        android:layout_weight="1"/>

                    <RadioButton
                        android:id="@+id/q3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/aburrido"
                        android:layout_weight="1"/>
                </RadioGroup>

            </LinearLayout>

            <EditText
                android:id="@+id/comentarios_finales"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:background="@color/blanco"
                android:textSize="20dp"
                android:gravity="left"
                android:hint="@string/Hint_descripcion"/>

            <Button
                android:id="@+id/send_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:text="@string/Enviar"/>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>