<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorFondo"
    tools:context="com.usach.sebastianvallejos.scap_apoderados.Activities.MainMenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="25dp"
            android:text="@string/Saludo_inicial"
            android:textColor="@color/blanco"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/Descripcion_inicial"
            android:textSize="18dp"
            android:textColor="@color/blanco"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="2">

                <ImageButton
                    android:id="@+id/boton_ses"
                    android:layout_width="131dp"
                    android:layout_height="138dp"
                    android:background="@drawable/ses" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Titulo_SES"
                    android:textColor="@color/blanco"
                    android:textSize="16dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="2"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/boton_homework"
                    android:layout_width="131dp"
                    android:layout_height="138dp"
                    android:background="@drawable/tarea"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Titulo_tareas"
                    android:textColor="@color/blanco"
                    android:textSize="16dp"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/boton_pruebas"
                    android:layout_width="131dp"
                    android:layout_height="138dp"
                    android:background="@drawable/prueba"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Titulo_pruebas"
                    android:textColor="@color/blanco"
                    android:textSize="16dp"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/boton_materials"
                    android:layout_width="131dp"
                    android:layout_height="138dp"
                    android:background="@drawable/materiales"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Titulo_materiales"
                    android:textColor="@color/blanco"
                    android:textSize="16dp"/>


            </LinearLayout>


        </LinearLayout>


    </LinearLayout>


</android.support.constraint.ConstraintLayout>
